fix: Adding a hidden overflow on the body to remove the scrollbar

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: roboto;
+    overflow: hidden;
 }
 
 .container {
